--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,6 @@
-# Student Marks Analyzer - Requirements
-
-# Core dependencies (for web application)
 streamlit>=1.28.0
 pandas>=1.5.0
-
-# Optional dependencies (for advanced features)
 plotly>=5.15.0
-
-# Python version requirement
-python>=3.7
+mysql-connector-python>=8.3.0
+python-dotenv>=1.0.1
+requests>=2.31.0
